<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_gravity="center">

    <TextView
        android:id="@+id/tvEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="huyhxps05234@gmail.com"
        android:textColor="?attr/primaryiconColor"
        android:layout_margin="@dimen/spacingSmall"/>

        <LinearLayout
            android:weightSum="10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/line_bottom">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:paddingStart="@dimen/spacingSmall"
                android:textColor="?attr/primaryiconColor"
                android:text="@string/dialog_change_pass_old_pass"
                android:textSize="@dimen/textsizeNormal"
                android:textStyle="bold"
                tools:ignore="RtlSymmetry" />

            <EditText
                android:id="@+id/edOldpass"
                android:layout_weight="6"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/transparent"
                android:hint="@string/dialog_change_pass_hint_old_pass"
                android:textSize="@dimen/textsizeNormal" />
        </LinearLayout>

        <LinearLayout
            android:weightSum="10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/line_bottom">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:paddingLeft="@dimen/spacingSmall"
                android:textColor="?attr/primaryiconColor"
                android:text="@string/dialog_change_pass_new_pass"
                android:textSize="@dimen/textsizeNormal"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edNewpass"
                android:layout_weight="6"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/transparent"
                android:hint="@string/dialog_change_pass_hint_new_pass"
                android:textSize="@dimen/textsizeNormal" />
        </LinearLayout>

        <LinearLayout
            android:weightSum="10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/line_bottom">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:paddingLeft="@dimen/spacingSmall"
                android:text="@string/dialog_change_pass_confirm"
                android:textColor="?attr/primaryiconColor"
                android:textSize="@dimen/textsizeNormal"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edConfirm"
                android:layout_weight="6"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/transparent"
                android:hint="@string/dialog_change_pass_hint_confirm"
                android:textSize="@dimen/textsizeNormal" />
        </LinearLayout>

</LinearLayout>