<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:padding="@dimen/spacingMinor">

        <ProgressBar
            android:id="@+id/progress"
            style="@style/Base.Widget.AppCompat.ProgressBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/tvTimer"
            android:layout_below="@id/progress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="?attr/secondTextColor"/>

        <RelativeLayout
            android:id="@+id/layoutCode"
            android:layout_below="@+id/tvTimer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border_top">

            <EditText
                android:id="@+id/edCode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_email"
                android:drawablePadding="@dimen/spacingMinor"
                android:backgroundTint="#00ffffff"
                android:inputType="text"
                android:hint="@string/forgot_pass_hint_code"
                android:textColorHint="?attr/hintTextColor"
                android:textColor="?attr/secondTextColor"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/layoutUsername"
            android:layout_below="@+id/layoutCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border_top">

            <EditText
                android:id="@+id/edName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_user"
                android:drawablePadding="@dimen/spacingMinor"
                android:backgroundTint="#00ffffff"
                android:inputType="text"
                android:hint="@string/register_hint_username"
                android:textColorHint="?attr/hintTextColor"
                android:textColor="?attr/secondTextColor"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/layoutEmail"
            android:layout_below="@+id/layoutUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border_middle">

            <EditText
                android:id="@+id/edEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_email"
                android:drawablePadding="@dimen/spacingMinor"
                android:backgroundTint="#00ffffff"
                android:inputType="textEmailAddress"
                android:hint="@string/register_hint_email"
                android:textColorHint="?attr/hintTextColor"
                android:textColor="?attr/secondTextColor"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/layoutPassword"
            android:layout_below="@+id/layoutEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border_middle">

            <EditText
                android:id="@+id/edPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_key"
                android:drawablePadding="@dimen/spacingMinor"
                android:backgroundTint="#00ffffff"
                android:inputType="textPassword"
                android:hint="@string/register_hint_pass"
                android:textColorHint="?attr/hintTextColor"
                android:textColor="?attr/secondTextColor"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/layoutRepeat"
            android:layout_below="@+id/layoutPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border_bottom">

            <EditText
                android:id="@+id/edRepeat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_key"
                android:drawablePadding="@dimen/spacingMinor"
                android:backgroundTint="#00ffffff"
                android:inputType="textPassword"
                android:hint="@string/register_hint_confirm"
                android:textColorHint="?attr/hintTextColor"
                android:textColor="?attr/secondTextColor"/>
        </RelativeLayout>

        <Button
            android:id="@+id/btnRegister"
            android:layout_centerInParent="true"
            android:layout_below="@id/layoutRepeat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacingSmall"
            android:background="?attr/buttonColor"
            android:text="@string/register_register"
            android:textColor="?attr/secondTextColor" />

        <Button
            android:id="@+id/btnAbort"
            android:layout_centerInParent="true"
            android:layout_below="@id/btnRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacingSmall"
            android:background="?attr/buttonColor"
            android:text="@string/register_abort"
            android:textColor="?attr/secondTextColor" />

        <TextView
            android:id="@+id/tvLogin"
            android:layout_below="@id/btnAbort"
            android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacingSmall"
            android:text="@string/register_already"
            android:textSize="@dimen/textsizeNormal"
            android:textColor="?attr/secondTextColor"/>
    </RelativeLayout>
</RelativeLayout>