<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:padding="@dimen/spacingMinor">

        <ProgressBar
            android:id="@+id/progress"
            style="@style/Base.Widget.AppCompat.ProgressBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/tvTimer"
            android:layout_below="@id/progress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="?attr/secondTextColor"/>

        <RelativeLayout
            android:id="@+id/layoutEmail"
            android:layout_below="@id/tvTimer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border_all">

            <EditText
                android:id="@+id/edEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_user"
                android:drawablePadding="@dimen/spacingMinor"
                android:backgroundTint="#00ffffff"
                android:inputType="textEmailAddress"
                android:hint="@string/forgot_pass_hint_email"
                android:textColorHint="?attr/hintTextColor"
                android:textColor="?attr/secondTextColor"
                tools:ignore="TextFields" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/layoutCode"
            android:layout_below="@+id/layoutEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border_top">

            <EditText
                android:id="@+id/edCode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_email"
                android:drawablePadding="@dimen/spacingMinor"
                android:backgroundTint="#00ffffff"
                android:inputType="text"
                android:hint="@string/forgot_pass_hint_code"
                android:textColorHint="?attr/hintTextColor"
                android:textColor="?attr/secondTextColor"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/layoutPassword"
            android:layout_below="@+id/layoutCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border_bottom">

            <EditText
                android:id="@+id/edPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_key"
                android:drawablePadding="@dimen/spacingMinor"
                android:backgroundTint="#00ffffff"
                android:inputType="textPassword"
                android:hint="@string/forgot_pass_hint_new_pass"
                android:textColorHint="?attr/hintTextColor"
                android:textColor="?attr/secondTextColor"/>
        </RelativeLayout>

        <Button
            android:id="@+id/btnReset"
            android:layout_centerInParent="true"
            android:layout_below="@id/layoutPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacingSmall"
            android:background="?attr/buttonColor"
            android:text="@string/forgot_pass_reset_pass"
            android:textColor="?attr/secondTextColor" />

        <Button
            android:id="@+id/btnBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/btnReset"
            android:layout_marginTop="@dimen/spacingSmall"
            android:background="@android:color/transparent"
            android:drawableLeft="@drawable/ic_arrow_white"
            android:text="@string/forgot_pass_back"
            android:layout_alignParentRight="true"
            android:textColor="?attr/secondTextColor"/>
    </RelativeLayout>
</RelativeLayout>